...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_name"
        style="@style/Title_Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_8x"
        android:textSize="@dimen/font_24x"
        android:textStyle="bold"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/user_title_preview" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/Title_Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_8x"
        android:textSize="@dimen/font_16x"
        app:layout_constraintEnd_toEndOf="parent"
...
